src/index.css
.swiper {
  overflow: visible !important;
}

/*! Page Team */ 

.swiper-slide.is-investors, .swiper-slide.is-partners, .swiper-slide.is-press  {
  transition: transform 3000ms ease;
}
  
.swiper-slide.is-investors.is-active, .swiper-slide.is-partners.is-active, .swiper-slide.is-press.is-active {
  transform: scale(1.2) !important; /* Moyen */
}

.swiper-slide.is-investors.swiper-slide-prev, .swiper-slide.is-partners.swiper-slide-prev, .swiper-slide.is-press.swiper-slide-prev {
  transform: scale(1.1) !important; /* Moyen */
}
  
.swiper-slide.is-investors.swiper-slide-next, .swiper-slide.is-partners.swiper-slide-next, .swiper-slide.is-press.swiper-slide-next {
  transform: scale(1.1) !important; /* Moyen */
}
  
/*! Page Concept */ 



.swiper-pagination-bullet {
  width: auto !important;
  min-width: 10rem;
  height: auto !important;
  padding-top: 0.875rem !important;
  padding-right: 1.5rem !important;
  padding-bottom: 1rem !important;
  padding-left: 1.25rem !important;
  opacity: 0.5;
  transition-property: border-radius, text-shadow, box-shadow, opacity;
  transition-duration: 250ms, 250ms, 250ms, 250ms;
  transition-timing-function: ease, ease, ease, ease;
  font-family: Tt norms pro;
  color: var(--white);
  font-size: 1.25rem;
  font-weight: 600;
  text-decoration: none;
  background-color: var(--color--transparent) !important;
  text-align: left;
}
  
  .swiper-pagination-bullet.swiper-pagination-bullet-active {
    border-top-left-radius: 0.25rem;
    border-top-right-radius: 0.25rem;
    border-bottom-left-radius: 0.25rem;
    border-bottom-right-radius: 0.25rem;
    box-shadow: inset 0 0 6px 0 rgba(255, 255, 255, 0.25);
    opacity: 1;
    backdrop-filter: blur(8px);
    text-shadow: 0 0 0.75rem var(--white);
    background-color: var(--color--transparent);
  }
  
  .swiper-pagination-bullet:hover {
    opacity: 1;
  }
  
  .swiper-pagination-bullet:medium {
    flex-grow: 0;
    flex-shrink: 0;
    flex-basis: auto;
  }

  /*! Page Concept - Radial */ 

  .swiper-slide::after {
    content: '';
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background: radial-gradient(circle, transparent, black);
    opacity: 0; /* Commencer invisible */
    z-index: 1; /* Assurez-vous qu'il est au-dessus du contenu de la diapositive */
  }

/*! PC */ 
@media (min-width: 1025px) {
.swiper-vertical > .swiper-pagination-bullets, .swiper-pagination-vertical.swiper-pagination-bullets {
right: auto !important;
}
}

/*! Mobile */ 
@media (max-width: 1024px) {

  .swiper-vertical > .swiper-pagination-bullets, .swiper-pagination-vertical.swiper-pagination-bullets {
      top: 10% !important;
      left: 0% !important;
      overflow: scroll !important;
      flex-direction: row !important;
      justify-content: flex-start !important;
      -ms-overflow-style: none; 
      scrollbar-width: none;  
}

  .swiper-pagination-bullet {
    display: inline-block !important;
   white-space: nowrap !important;
  }

  .concept-v2_cards {
    backdrop-filter: blur(100px) !important;
  }

  .swiper-pagination-bullet {
    min-width: auto;
    padding-top: 0.875rem !important;
    padding-right: 1.5rem !important;
    padding-bottom: 1rem !important;
    padding-left: 1.25rem !important;
  }
}


/*! Radial transition */ 

/* @keyframes radialAnimation {
  from {
    background-image: radial-gradient(circle at 50% 50%, transparent 0%, black 0%);
  }
  to {
    background-image: radial-gradient(circle at 50% 50%, transparent 0%, black 100%);
  }
} */

.concept_radial {
  position: absolute;
  left: 0%;
  top: 0%;
  right: 0%;
  bottom: 0%;
  transition: background-image 2s ease-out;
}

